p2/confs/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: multi-app-ingress
spec:
  rules:
  - host: app1.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web-app-1-service
            port:
              number: 80
  - host: app2.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web-app-2-service
            port:
              number: 80
    - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web-app-3-service
            port:
              number: 80
